# USD

./: .gitignore
build_scripts/: build_usd.py
cmake/defaults/: Packages.cmake
cmake/modules/: FindMaterialX.cmake  FindOpenImageIO.cmake  FindOpenSubdiv.cmake  FindPTex.cmake
extras/imaging/examples/hdTiny/: CMakeLists.txt
pxr/imaging/: CMakeLists.txt
pxr/imaging/garch/: CMakeLists.txt
pxr/imaging/glf/: CMakeLists.txt
pxr/imaging/hdMtlx/: CMakeLists.txt
pxr/imaging/hdSt/: CMakeLists.txt  materialXFilter.cpp
pxr/imaging/hgi/: hgi.cpp
pxr/imaging/hgiInterop/: CMakeLists.txt  hgiInterop.cpp
pxr/imaging/hgiVulkan/: hgi.cpp
pxr/imaging/hioOpenVDB/: CMakeLists.txt
pxr/imaging/plugin/hioOiio/: CMakeLists.txt
pxr/usd/sdf/: CMakeLists.txt
pxr/usd/sdr/: shaderMetadataHelpers.h
pxr/usd/usdMtlx/: CMakeLists.txt
pxr/usdImaging/: CMakeLists.txt
pxr/usdImaging/usdAppUtils/: CMakeLists.txt
pxr/usdImaging/usdImagingGL/: CMakeLists.txt
pxr/usdImaging/usdviewq/: viewSettingsDataModel.py
